<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/toolbar"
        android:background="@color/color_discvr_done"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="48dp"
            android:paddingRight="48dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_profile_image"
                android:src="@drawable/profile_placeholder"
                app:border_color="@color/bg_gray"
                app:border_width="2dp" />

            <com.project.socialevening.widgets.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_profile_pic" />

            <com.project.socialevening.widgets.CustomFontEditText
                android:id="@+id/et_first_name"
                style="@style/et_name_info_screen"
                android:layout_marginTop="32dp"
                android:hint="@string/hint_user_name" />

            <View style="@style/view_sep_info_screen" />

            <com.project.socialevening.widgets.CustomFontEditText
                android:id="@+id/et_last_name"
                style="@style/et_name_info_screen"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_last_name" />

            <View style="@style/view_sep_info_screen" />

            <com.project.socialevening.widgets.CustomFontButton
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_discvr_done"
                android:elevation="2dp"
                android:padding="16dp"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>