<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_header_height"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/cross_over_logo" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <com.project.socialevening.widgets.CustomFontEditText
                    android:id="@+id/et_name"
                    style="@style/et_name_info_screen"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_first_name" />

                <View
                    style="@style/view_sep_info_screen"
                    android:background="@color/apptentive_black" />

                <com.project.socialevening.widgets.CustomFontEditText
                    android:id="@+id/et_username"
                    style="@style/et_name_info_screen"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_name" />

                <View
                    style="@style/view_sep_info_screen"
                    android:background="@color/apptentive_black" />

                <com.project.socialevening.widgets.CustomFontEditText
                    android:id="@+id/et_password"
                    style="@style/et_name_info_screen"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />


                <View
                    style="@style/view_sep_info_screen"
                    android:background="@color/apptentive_black" />


            </LinearLayout>

            <com.project.socialevening.widgets.CustomFontButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_blue_bg"
                android:padding="16dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <FrameLayout
                android:id="@+id/frame_noInternet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                android:visibility="gone">

                <include layout="@layout/layout_no_internet" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>